randcs-core/src/main/java/org/example/common/error/GlobalErrorCode.java
package org.example.common.error;

public interface GlobalErrorCode {

    public int getErrorCode();

    public String getErrorMessage();
}
